Use the new Panama API